force-app/main/default/objects/copado__Data_Change_Event_Condition_Items__c/fields/copado__Event_Condition_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Event_Condition_Id__c</fullName>
    <label>Event Condition Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>