force-app/main/default/objects/copado__Data_Change_Event_Condition_Items__c/fields/copado__Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>copado__Filter_Condition__c</fullName>
    <label>Filter Condition</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>