force-app/main/default/objects/copado__Data_Change_Event_Condition_Items__c/fields/copado__Filter_Order__c.field-meta.xml
<CustomField>
    <fullName>copado__Filter_Order__c</fullName>
    <label>Filter Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>